<resources>
    <string name="facebook_application_id" translatable="false">411432499488039</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb411432499488039</string>
    <string name="app_name">Past Paper Portal - Group 1b</string>
    <string name="viewPaper">View</string>
    <string name="upload_document">Upload</string>
    <string name="download_paper">Download</string>
    <string name="paper_discuss">Paper discussion forum</string>
    <string name="module_paper">Module Name - Paper Name</string>
    <string name="discussion_board">Discussion Board</string>
    <string name="q1"><u>[June-Q2 - Differenciation] How to differenciate log?</u></string>
    <string name="q1_no_underline">[June-Q2 - Differenciation] How to differenciate log?</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="username123">Username123</string>
    <string name="date1">3 days ago</string>
    <string name="q2"><u>[June - Part A] Doubt regarding Question 2</u></string>
    <string name="username456">Username456</string>
    <string name="date2">6 days ago</string>
    <string name="add_question">Add a Question!</string>
    <string name="body_optional">body (optional)</string>
    <string name="qa">Ask a Question</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">title</string>
    <string name="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</string>
    <string name="lorem2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="a_week_ago">a week ago</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="replies_sorted_by_date">Replies (sorted by date):</string>
    <string name="_4">4</string>
    <string name="username679">username679</string>
    <string name="_2_weeks_ago">2 weeks ago</string>
    <string name="todo">TODO</string>
    <string name="lorem3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</string>
    <string name="lorem4">Lorem ipsum dolor sit amet</string>
    <string name="lorem5">Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, </string>
    <string name="no_comments">Number of comments</string>
    <string name="results">Results</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="upload_doc">Upload PDF</string>
    <string name="UploadOREdit">Upload/Edit</string>
    <string name="FacSpec">Faculty and Specialization</string>
    <string name="AcademicY">AcademicYear</string>
    <string name="StoreFac">Faculty</string>
    <string name="StoreSpec">Specialization</string>
    <string name="StoreYear">Academic Year</string>
    <string name="Search_Head">Search for papers</string>
    <string name="StoreSem">Semester</string>
    <string name="SearchButton">GO</string>
    <string name="Comments">Comments</string>
    <string name="Image">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">or</string>
    <string name="dashboard">Dashboard</string>
    <string name="Hello">Hello,</string>
    <string name="admin">System Administrator</string>
    <string name="manage_users">Manage Users</string>
    <string name="requests">Requests</string>
    <string name="view_ques">View Questions</string>
    <string name="view_pastp">View Pastpapers</string>
    <string name="upload_ques">Upload Question</string>
    <string name="upload_answer">Upload Answer</string>
    <string name="upload_pastp">Upload PastPaper</string>
    <string name="send_msg">Send Message</string>
    <string name="user1">User_1</string>
    <string name="user2">User_2</string>
    <string name="user3">User_3</string>
    <string name="view">View</string>
    <string name="remove">Remove</string>
    <string name="upload1">Upload_1</string>
    <string name="upload2">Upload_2</string>
    <string name="upload3">Upload_3</string>
    <string name="byuser1">by user_1</string>
    <string name="byuser2">by user_2</string>
    <string name="byuser3">by user_3</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="send_to">Send To : </string>
    <string name="user_id">User ID :</string>
    <string name="optional">*only if individual*</string>
    <string name="subject">Subject :</string>
    <string name="body">Body :</string>
    <string name="enter_body">enter body</string>
    <string name="enter_subject">enter subject</string>
    <string name="enter">enter</string>
    <string name="moduleName">Module</string>
    <string name="SelectDoc">Select file</string>
    <string name="no_questions_yet">No Questions Yet</string>
    <string name="pencil">pencil</string>
    <string name="be_the_first_to_ask_a_question">Be the first to ask a question!</string>
    <string name="no_answers_yet">No Answers Yet</string>
    <string name="be_the_first_to_start_a_discussion">Be the first to start a discussion!</string>
    <string name="add_a_reply">Add a Reply!</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_reply">Enter reply…</string>
    <string name="_8942"><![CDATA[&&#8942]]></string>
    <string name="year_prompt">Choose Academic year</string>
    <string-array name="year">
        <item>2018</item>
        <item>2019</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
    </string-array>
    <string name="semester_prompt">Choose semester</string>
    <string name="or_sign_up"><u>or Sign Up</u></string>
    <string name="search_here">Search here…</string>
    <string name="search_for_papers">SEARCH FOR PAPERS</string>
    <string name="search_image_button">Search image button</string>
    <string name="logo_for_search_page">Logo for search page</string>
    <string name="orCapital">Or</string>
    <string name="log_in">Log in</string>
    <string name="no_items_match_your_search">No items match your search</string>
    <string name="username">Username</string>
    <string name="sign_in_google">Sign In google</string>
    <string name="sign_out">Sign out</string>
    <string name="firebase">Firebase</string>
    <string name="to_search">to search</string>
    <string name="sign_up">SIGN UP</string>
    <string name="admin_gui">Admin GUI</string>
    <string name="zero">0\u00A0</string>
    <string name="search">SEARCH</string>
    <string name="object_oriented">Object Oriented</string>
    <string name="no_matches_found">No Matches Found</string>
    <string name="make_sure_your_keywords_are_spelt_correctly">Make sure your keywords are spelt correctly</string>
    <string name="close">close</string>
</resources>
