<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="#fff"
    android:padding="8dp"
    card_view:cardCornerRadius="4dp"
    >

    <TableRow
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="25dp">

            <ImageView
                android:id="@+id/dp1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/profile_avatar"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/male_avatar" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="50dp"
                android:onClick="viewQuestion"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/q1"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/date"
                    android:layout_alignLeft="@id/date"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/username123"
                    android:textColor="#BDBDBD"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/date1"
                    android:textColor="#BDBDBD" />
            </RelativeLayout>

        </LinearLayout>

    </TableRow>
</androidx.cardview.widget.CardView>